--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </svg>
             </div>
             <div class="people">
-              <div class="people-img">
+              <div class="people-img" id="people-img">
                 <img
                   class="people1"
                   src="people/customer-1.jpg"
